const express = require('express');
const http = require('http');
const WebSocket = require('ws');
const cors = require('cors');
const path = require('path');
const fs = require('fs');
const config = require('./config');
const mqttClient = require('./mqtt-client');
const protoHandler = require('./proto-handler');
const ExplorationEngine = require('./exploration-engine');
const MissionRecorder = require('./mission-recorder');

// é¢„è®¾èˆªçº¿æ•°æ®æ–‡ä»¶è·¯å¾„
const PRESET_ROUTES_FILE = path.join(__dirname, 'data', 'preset-routes.json');

const app = express();
const server = http.createServer(app);
const wss = new WebSocket.Server({ server });

// åˆ›å»ºæ¢ç´¢å¼•æ“å®ä¾‹ï¼ˆå…ˆå£°æ˜ï¼Œå¯åŠ¨ååˆå§‹åŒ–ï¼‰
let explorationEngine = null;

// åˆ›å»ºä»»åŠ¡è®°å½•å™¨å®ä¾‹
const missionRecorder = new MissionRecorder();

// è¿è¡Œæ¨¡å¼æ£€æµ‹ï¼ˆæ£€æµ‹æ˜¯å¦æœ‰æ¨¡æ‹Ÿå™¨åœ¨åŒä¸€brokerä¸Šè¿è¡Œï¼‰
const DRONE_MODE = process.env.DRONE_MODE || 'auto'; // 'real', 'simulator', 'auto'

// ä¸­é—´ä»¶
app.use(cors());
app.use(express.json());

// é™æ€æ–‡ä»¶æœåŠ¡ - æä¾›ç‹¬ç«‹é¡µé¢è®¿é—®
app.use('/static', express.static(path.join(__dirname, 'public')));

// HTTP API è·¯ç”±
app.get('/api/status', (req, res) => {
  res.json({
    mqtt: mqttClient.getStatus(),
    websocket: {
      clients: wss.clients.size
    },
    mode: DRONE_MODE,
    modeDescription: DRONE_MODE === 'real' ? 'å®æœºæ¨¡å¼' :
                     DRONE_MODE === 'simulator' ? 'æ¨¡æ‹Ÿå™¨æ¨¡å¼' : 'è‡ªåŠ¨æ£€æµ‹'
  });
});

// å‘å¸ƒä»»åŠ¡
app.post('/api/mission', (req, res) => {
  try {
    mqttClient.publishMission(req.body);
    res.json({ success: true, message: 'ä»»åŠ¡å·²ä¸‹å‘' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// ä»»åŠ¡æ‰§è¡Œæ§åˆ¶
app.post('/api/execution', (req, res) => {
  try {
    mqttClient.publishExecution(req.body);
    res.json({ success: true, message: 'æ‰§è¡ŒæŒ‡ä»¤å·²å‘é€' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// èµ·é£/é™è½æŒ‡ä»¤
app.post('/api/command', (req, res) => {
  try {
    mqttClient.publishCommand(req.body);
    res.json({ success: true, message: 'æŒ‡ä»¤å·²å‘é€' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// ========== MJPEGè§†é¢‘æµ ==========
// å­˜å‚¨MJPEGæµå®¢æˆ·ç«¯
const mjpegClients = new Set();
let latestFrame = null;

// MJPEGæµç«¯ç‚¹
app.get('/api/mjpeg', (req, res) => {
  console.log('ğŸ“¹ MJPEGå®¢æˆ·ç«¯è¿æ¥');

  res.setHeader('Content-Type', 'multipart/x-mixed-replace; boundary=frame');
  res.setHeader('Cache-Control', 'no-cache');
  res.setHeader('Connection', 'keep-alive');

  mjpegClients.add(res);

  // å¦‚æœæœ‰æœ€æ–°å¸§ï¼Œç«‹å³å‘é€
  if (latestFrame) {
    sendMjpegFrame(res, latestFrame);
  }

  req.on('close', () => {
    console.log('ğŸ“¹ MJPEGå®¢æˆ·ç«¯æ–­å¼€');
    mjpegClients.delete(res);
  });
});

// å‘é€MJPEGå¸§
function sendMjpegFrame(res, frameData) {
  try {
    const buffer = Buffer.from(frameData, 'base64');
    res.write('--frame\r\n');
    res.write('Content-Type: image/jpeg\r\n');
    res.write(`Content-Length: ${buffer.length}\r\n\r\n`);
    res.write(buffer);
    res.write('\r\n');
  } catch (e) {
    // å®¢æˆ·ç«¯å¯èƒ½å·²æ–­å¼€
  }
}

// å¹¿æ’­å¸§åˆ°æ‰€æœ‰MJPEGå®¢æˆ·ç«¯
function broadcastMjpegFrame(frameData) {
  latestFrame = frameData;
  mjpegClients.forEach(client => {
    sendMjpegFrame(client, frameData);
  });
}

// ========== é¢„è®¾èˆªçº¿API ==========

// è·å–æ‰€æœ‰é¢„è®¾èˆªçº¿åˆ—è¡¨
app.get('/api/preset-routes', (req, res) => {
  try {
    if (!fs.existsSync(PRESET_ROUTES_FILE)) {
      return res.json({ success: true, routes: {} });
    }
    const data = JSON.parse(fs.readFileSync(PRESET_ROUTES_FILE, 'utf-8'));
    // è¿”å›èˆªçº¿åˆ—è¡¨ï¼ˆä¸åŒ…å«å®Œæ•´èˆªç‚¹æ•°æ®ï¼Œåªè¿”å›åç§°å’Œæè¿°ï¼‰
    const routeList = {};
    for (const [key, value] of Object.entries(data)) {
      routeList[key] = {
        name: value.name,
        description: value.description,
        waypointCount: value.waypoints?.length || 0
      };
    }
    res.json({ success: true, routes: routeList });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–æŒ‡å®šé¢„è®¾èˆªçº¿çš„è¯¦ç»†æ•°æ®
app.get('/api/preset-routes/:routeId', (req, res) => {
  try {
    const { routeId } = req.params;
    if (!fs.existsSync(PRESET_ROUTES_FILE)) {
      return res.status(404).json({ success: false, error: 'èˆªçº¿ä¸å­˜åœ¨' });
    }
    const data = JSON.parse(fs.readFileSync(PRESET_ROUTES_FILE, 'utf-8'));
    if (!data[routeId]) {
      return res.status(404).json({ success: false, error: 'èˆªçº¿ä¸å­˜åœ¨' });
    }
    res.json({ success: true, route: data[routeId] });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// ä¿å­˜/æ›´æ–°é¢„è®¾èˆªçº¿
app.post('/api/preset-routes/:routeId', (req, res) => {
  try {
    const { routeId } = req.params;
    const { name, description, waypoints } = req.body;

    // ç¡®ä¿dataç›®å½•å­˜åœ¨
    const dataDir = path.dirname(PRESET_ROUTES_FILE);
    if (!fs.existsSync(dataDir)) {
      fs.mkdirSync(dataDir, { recursive: true });
    }

    // è¯»å–ç°æœ‰æ•°æ®
    let data = {};
    if (fs.existsSync(PRESET_ROUTES_FILE)) {
      data = JSON.parse(fs.readFileSync(PRESET_ROUTES_FILE, 'utf-8'));
    }

    // æ›´æ–°èˆªçº¿
    data[routeId] = {
      name: name || routeId,
      description: description || '',
      waypoints: waypoints || []
    };

    // ä¿å­˜
    fs.writeFileSync(PRESET_ROUTES_FILE, JSON.stringify(data, null, 2), 'utf-8');

    res.json({ success: true, message: 'èˆªçº¿å·²ä¿å­˜' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// åˆ é™¤é¢„è®¾èˆªçº¿
app.delete('/api/preset-routes/:routeId', (req, res) => {
  try {
    const { routeId } = req.params;
    if (!fs.existsSync(PRESET_ROUTES_FILE)) {
      return res.status(404).json({ success: false, error: 'èˆªçº¿ä¸å­˜åœ¨' });
    }
    const data = JSON.parse(fs.readFileSync(PRESET_ROUTES_FILE, 'utf-8'));
    if (!data[routeId]) {
      return res.status(404).json({ success: false, error: 'èˆªçº¿ä¸å­˜åœ¨' });
    }
    delete data[routeId];
    fs.writeFileSync(PRESET_ROUTES_FILE, JSON.stringify(data, null, 2), 'utf-8');
    res.json({ success: true, message: 'èˆªçº¿å·²åˆ é™¤' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// ========== ä»»åŠ¡è®°å½•API ==========

// è·å–ä»»åŠ¡è®°å½•åˆ—è¡¨
app.get('/api/missions', (req, res) => {
  try {
    const missions = missionRecorder.getMissionList();
    res.json({ success: true, missions, total: missions.length });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–ä»»åŠ¡è®°å½•è¯¦æƒ…ï¼ˆåŒ…å«è½¨è¿¹å’Œç‚¹äº‘æ•°æ®ï¼‰
app.get('/api/missions/:timestamp', (req, res) => {
  try {
    const result = missionRecorder.getMissionDetail(req.params.timestamp);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–ä»»åŠ¡è§†é¢‘å¸§åˆ—è¡¨
app.get('/api/missions/:timestamp/frames', (req, res) => {
  try {
    const result = missionRecorder.getMissionFrames(req.params.timestamp);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–å•ä¸ªè§†é¢‘å¸§
app.get('/api/missions/:timestamp/frames/:filename', (req, res) => {
  try {
    const frame = missionRecorder.getFrame(req.params.timestamp, req.params.filename);
    if (frame) {
      res.setHeader('Content-Type', 'image/jpeg');
      res.send(frame);
    } else {
      res.status(404).json({ success: false, error: 'å¸§ä¸å­˜åœ¨' });
    }
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// åˆ é™¤ä»»åŠ¡è®°å½•
app.delete('/api/missions/:timestamp', (req, res) => {
  try {
    const result = missionRecorder.deleteMission(req.params.timestamp);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–å½“å‰è®°å½•çŠ¶æ€
app.get('/api/missions/recording/status', (req, res) => {
  try {
    const status = missionRecorder.getRecordingStatus();
    res.json({ success: true, ...status });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// æ‰‹åŠ¨åœæ­¢è®°å½•
app.post('/api/missions/recording/stop', (req, res) => {
  try {
    const result = missionRecorder.stopRecording();
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// ========== æ¢ç´¢ç›¸å…³API ==========

// å¯åŠ¨æ¢ç´¢
app.post('/api/exploration/start', async (req, res) => {
  try {
    const result = await explorationEngine.startExploration(req.body);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// æš‚åœæ¢ç´¢
app.post('/api/exploration/pause', (req, res) => {
  try {
    const result = explorationEngine.pauseExploration();
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// æ¢å¤æ¢ç´¢
app.post('/api/exploration/resume', (req, res) => {
  try {
    const result = explorationEngine.resumeExploration();
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// åœæ­¢æ¢ç´¢
app.post('/api/exploration/stop', (req, res) => {
  try {
    const result = explorationEngine.stopExploration();
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–æ¢ç´¢çŠ¶æ€
app.get('/api/exploration/status', (req, res) => {
  try {
    const status = explorationEngine.publishExplorationStatus();
    res.json(status);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–åœ°å›¾æ•°æ®
app.get('/api/exploration/map', (req, res) => {
  try {
    const mapData = explorationEngine.getMapData();
    res.json(mapData);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// é‡ç½®æ¢ç´¢å¼•æ“
app.post('/api/exploration/reset', (req, res) => {
  try {
    explorationEngine.reset();
    res.json({ success: true, message: 'æ¢ç´¢å¼•æ“å·²é‡ç½®' });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è®¾ç½®ROIæ¢ç´¢åŒºåŸŸ
app.post('/api/exploration/roi/set', (req, res) => {
  try {
    const { polygon } = req.body;
    if (!polygon || !Array.isArray(polygon)) {
      return res.status(400).json({
        success: false,
        message: 'polygonå‚æ•°å¿…é¡»æ˜¯æ•°ç»„ï¼Œä¾‹å¦‚: [{x: 0, y: 0}, {x: 5, y: 0}, {x: 5, y: 5}, {x: 0, y: 5}]'
      });
    }
    const result = explorationEngine.setROI(polygon);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// æ¸…é™¤ROIé™åˆ¶
app.post('/api/exploration/roi/clear', (req, res) => {
  try {
    const result = explorationEngine.clearROI();
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è®¾ç½®è¯„åˆ†æƒé‡
app.post('/api/exploration/weights/set', (req, res) => {
  try {
    const weights = req.body;
    const result = explorationEngine.setScoringWeights(weights);
    res.json(result);
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// è·å–å½“å‰è¯„åˆ†æƒé‡
app.get('/api/exploration/weights', (req, res) => {
  try {
    const weights = explorationEngine.getScoringWeights();
    res.json({ success: true, weights });
  } catch (error) {
    res.status(500).json({ success: false, error: error.message });
  }
});

// WebSocket è¿æ¥å¤„ç†
wss.on('connection', (ws) => {
  console.log('ğŸŒ WebSocket å®¢æˆ·ç«¯å·²è¿æ¥');

  // åˆå§‹åŒ–å¿ƒè·³çŠ¶æ€
  ws.isAlive = true;
  ws.on('pong', () => {
    ws.isAlive = true;
  });

  // æ·»åŠ åˆ°è®¢é˜…è€…åˆ—è¡¨
  mqttClient.addSubscriber(ws);

  // å‘é€è¿æ¥æˆåŠŸæ¶ˆæ¯
  ws.send(JSON.stringify({
    type: 'connection',
    status: 'connected',
    timestamp: Date.now()
  }));

  ws.on('message', (message) => {
    try {
      const data = JSON.parse(message);
      handleWebSocketMessage(ws, data);
    } catch (error) {
      console.error('WebSocket æ¶ˆæ¯å¤„ç†å¤±è´¥:', error);
    }
  });

  ws.on('close', () => {
    console.log('ğŸŒ WebSocket å®¢æˆ·ç«¯å·²æ–­å¼€');
    mqttClient.removeSubscriber(ws);
  });

  ws.on('error', (error) => {
    console.error('WebSocket é”™è¯¯:', error);
  });

  // å¦‚æœæ¢ç´¢å¼•æ“å·²åˆå§‹åŒ–ï¼Œå‘é€å½“å‰çŠ¶æ€
  if (explorationEngine) {
    try {
      const status = explorationEngine.publishExplorationStatus();
      ws.send(JSON.stringify({
        type: 'exploration_status',
        data: status
      }));
    } catch (error) {
      // åˆå§‹åŒ–æ—¶å¯èƒ½è¿˜æ²¡æœ‰æ•°æ®ï¼Œå¿½ç•¥é”™è¯¯
    }
  }
});

// WebSocket å¿ƒè·³æ£€æµ‹ (æ¯30ç§’æ£€æŸ¥ä¸€æ¬¡)
const heartbeatInterval = setInterval(() => {
  wss.clients.forEach((ws) => {
    if (ws.isAlive === false) {
      console.log('ğŸ’” å®¢æˆ·ç«¯å¿ƒè·³è¶…æ—¶ï¼Œç»ˆæ­¢è¿æ¥');
      return ws.terminate();
    }

    ws.isAlive = false;
    ws.ping();
  });
}, 30000);

// æœåŠ¡å™¨å…³é—­æ—¶æ¸…ç†å¿ƒè·³å®šæ—¶å™¨
wss.on('close', () => {
  clearInterval(heartbeatInterval);
});

/**
 * å¤„ç† WebSocket å®¢æˆ·ç«¯æ¶ˆæ¯
 */
async function handleWebSocketMessage(ws, data) {
  const { type, payload } = data;

  // åªè®°å½•épingæ¶ˆæ¯ï¼Œå‡å°‘æ—¥å¿—è¾“å‡º
  if (type !== 'ping') {
    console.log('ğŸ“¥ æ”¶åˆ° WebSocket æ¶ˆæ¯:', type, payload);
  }

  switch (type) {
    case 'ping':
      ws.send(JSON.stringify({ type: 'pong', timestamp: Date.now() }));
      break;

    case 'publish_mission':
      console.log('ğŸ“‹ å‘å¸ƒä»»åŠ¡:', payload);
      // å¯åŠ¨ä»»åŠ¡è®°å½•
      if (payload && payload.id) {
        const waypointCount = payload.tasks ? payload.tasks.filter(t => t.autoPilot).length : 0;
        missionRecorder.startRecording(payload.id, {
          waypoints: payload.tasks,
          waypointCount
        });
      }
      mqttClient.publishMission(payload);
      break;

    case 'publish_execution':
      console.log('â–¶ï¸ å‘å¸ƒæ‰§è¡ŒæŒ‡ä»¤:', payload);
      // å¦‚æœæ˜¯åœæ­¢ä»»åŠ¡ï¼Œåœæ­¢è®°å½•
      if (payload && payload.action === 'STOP') {
        missionRecorder.stopRecording();
      }
      mqttClient.publishExecution(payload);
      break;

    case 'publish_command':
      console.log('ğŸ® å‘å¸ƒæ§åˆ¶æŒ‡ä»¤:', payload);
      mqttClient.publishCommand(payload);
      break;

    // ========== æ¢ç´¢ç›¸å…³WebSocketæ¶ˆæ¯ ==========
    case 'start_exploration':
      console.log('ğŸ§­ å¯åŠ¨æ¢ç´¢:', payload);
      if (explorationEngine) {
        try {
          const result = await explorationEngine.startExploration(payload || {});
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: result
          }));
        } catch (error) {
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: { success: false, message: error.message }
          }));
        }
      } else {
        ws.send(JSON.stringify({
          type: 'exploration_response',
          data: { success: false, message: 'æ¢ç´¢å¼•æ“æœªåˆå§‹åŒ–' }
        }));
      }
      break;

    case 'stop_exploration':
      console.log('ğŸ›‘ åœæ­¢æ¢ç´¢');
      if (explorationEngine) {
        try {
          const result = explorationEngine.stopExploration();
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: result
          }));
        } catch (error) {
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: { success: false, message: error.message }
          }));
        }
      }
      break;

    case 'pause_exploration':
      console.log('â¸ï¸ æš‚åœæ¢ç´¢');
      if (explorationEngine) {
        try {
          const result = explorationEngine.pauseExploration();
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: result
          }));
        } catch (error) {
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: { success: false, message: error.message }
          }));
        }
      }
      break;

    case 'resume_exploration':
      console.log('â–¶ï¸ æ¢å¤æ¢ç´¢');
      if (explorationEngine) {
        try {
          const result = explorationEngine.resumeExploration();
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: result
          }));
        } catch (error) {
          ws.send(JSON.stringify({
            type: 'exploration_response',
            data: { success: false, message: error.message }
          }));
        }
      }
      break;

    case 'get_exploration_map':
      console.log('ğŸ—ºï¸ è·å–æ¢ç´¢åœ°å›¾');
      if (explorationEngine) {
        try {
          const mapData = explorationEngine.getMapData();
          ws.send(JSON.stringify({
            type: 'exploration_map',
            data: mapData
          }));
        } catch (error) {
          ws.send(JSON.stringify({
            type: 'exploration_map',
            data: { success: false, message: error.message }
          }));
        }
      }
      break;

    default:
      console.warn('æœªçŸ¥çš„ WebSocket æ¶ˆæ¯ç±»å‹:', type);
  }
}

/**
 * å¹¿æ’­æ¶ˆæ¯åˆ°æ‰€æœ‰WebSocketå®¢æˆ·ç«¯
 */
function broadcastToAll(message) {
  wss.clients.forEach(client => {
    if (client.readyState === WebSocket.OPEN) {
      try {
        client.send(JSON.stringify(message));
      } catch (error) {
        console.error('å¹¿æ’­æ¶ˆæ¯å¤±è´¥:', error);
      }
    }
  });
}

/**
 * å¯åŠ¨æœåŠ¡å™¨
 */
async function start() {
  try {
    console.log('ğŸš€ å¯åŠ¨æ— äººæœºç½‘é¡µæ§åˆ¶ç³»ç»Ÿ...');

    // 1. åˆå§‹åŒ– Protobuf
    await protoHandler.init();

    // 2. è¿æ¥ MQTTï¼ˆå¼‚æ­¥ï¼Œå¤±è´¥ä¸é˜»æ­¢æœåŠ¡å™¨å¯åŠ¨ï¼‰
    mqttClient.connect().catch(err => {
      console.warn('âš ï¸ MQTTåˆå§‹è¿æ¥å¤±è´¥ï¼Œå°†è‡ªåŠ¨é‡è¿:', err.message);
    });

    // 3. åˆå§‹åŒ–æ¢ç´¢å¼•æ“
    explorationEngine = new ExplorationEngine(mqttClient);
    console.log('ğŸ§­ æ¢ç´¢å¼•æ“å·²åˆå§‹åŒ–');

    // 4. ç›‘å¬æ¢ç´¢å¼•æ“äº‹ä»¶
    explorationEngine.on('exploration:started', (data) => {
      console.log('ğŸš€ æ¢ç´¢å·²å¯åŠ¨:', data);
      broadcastToAll({
        type: 'exploration_status',
        data: { isExploring: true, ...data }
      });
    });

    explorationEngine.on('exploration:stopped', (data) => {
      console.log('ğŸ›‘ æ¢ç´¢å·²åœæ­¢:', data);
      broadcastToAll({
        type: 'exploration_status',
        data: { isExploring: false, ...data }
      });
    });

    explorationEngine.on('exploration:paused', () => {
      console.log('â¸ï¸ æ¢ç´¢å·²æš‚åœ');
      broadcastToAll({
        type: 'exploration_status',
        data: { isPaused: true }
      });
    });

    explorationEngine.on('exploration:resumed', () => {
      console.log('â–¶ï¸ æ¢ç´¢å·²æ¢å¤');
      broadcastToAll({
        type: 'exploration_status',
        data: { isPaused: false }
      });
    });

    explorationEngine.on('exploration:status', (status) => {
      // å®šæœŸå¹¿æ’­æ¢ç´¢çŠ¶æ€
      broadcastToAll({
        type: 'exploration_status',
        data: status
      });
    });

    // 5. è¿æ¥MQTTæ•°æ®åˆ°æ¢ç´¢å¼•æ“å’Œä»»åŠ¡è®°å½•å™¨ï¼ˆé€šè¿‡å›è°ƒï¼‰
    mqttClient.setExplorationCallback((dataType, data) => {
      // æ¢ç´¢å¼•æ“å¤„ç†
      if (explorationEngine) {
        if (dataType === 'pointcloud') {
          explorationEngine.onPointCloudReceived(data);
        } else if (dataType === 'odometry') {
          explorationEngine.onOdometryReceived(data);
        }
      }

      // ä»»åŠ¡è®°å½•å™¨å¤„ç†
      if (missionRecorder.isRecording) {
        if (dataType === 'pointcloud') {
          missionRecorder.recordPointCloud(data);
        } else if (dataType === 'odometry') {
          missionRecorder.recordTrajectory(data);
        }
      }
    });

    // 6. è¿æ¥MQTTæ‘„åƒå¤´æ•°æ®åˆ°MJPEGæµå’Œä»»åŠ¡è®°å½•å™¨
    mqttClient.setCameraCallback((frameData) => {
      broadcastMjpegFrame(frameData);

      // ä»»åŠ¡è®°å½•å™¨ä¿å­˜è§†é¢‘å¸§
      if (missionRecorder.isRecording) {
        missionRecorder.recordVideoFrame(frameData);
      }
    });

    // 7. è¿æ¥MQTTä»»åŠ¡å›æ‰§åˆ°ä»»åŠ¡è®°å½•å™¨ï¼ˆä»»åŠ¡å®Œæˆæ—¶è‡ªåŠ¨åœæ­¢è®°å½•ï¼‰
    mqttClient.setMissionReceiptCallback((receiptData) => {
      console.log('ğŸ“‹ æ”¶åˆ°ä»»åŠ¡å›æ‰§:', receiptData);
      // å½“ä»»åŠ¡å®Œæˆï¼ˆçŠ¶æ€ä¸ºCOMPLETEDæˆ–STOPPEDï¼‰æ—¶ï¼Œåœæ­¢è®°å½•
      if (receiptData && (receiptData.status === 'COMPLETED' || receiptData.status === 'STOPPED' || receiptData.status === 2 || receiptData.status === 3)) {
        if (missionRecorder.isRecording) {
          console.log('ğŸ“¹ ä»»åŠ¡å®Œæˆï¼Œåœæ­¢è®°å½•');
          missionRecorder.stopRecording();
        }
      }
    });

    // 8. å¯åŠ¨ HTTP + WebSocket æœåŠ¡å™¨
    server.listen(config.http.port, () => {
      console.log('');
      console.log('âœ… æœåŠ¡å™¨å¯åŠ¨æˆåŠŸ!');
      console.log(`ğŸ“¡ HTTP API: http://localhost:${config.http.port}`);
      console.log(`ğŸŒ WebSocket: ws://localhost:${config.http.port}`);
      console.log(`ğŸš MQTT Broker: ${config.mqtt.broker}:${config.mqtt.port}`);
      console.log('ğŸ§­ æ¢ç´¢å¼•æ“: å·²å°±ç»ª');
      console.log('');
      console.log('ğŸ’¡ æç¤º: ç¡®ä¿å·²è¿æ¥åˆ°æ— äººæœºçƒ­ç‚¹ (10.42.0.1)');
      console.log('');
    });
  } catch (error) {
    console.error('âŒ å¯åŠ¨å¤±è´¥:', error);
    process.exit(1);
  }
}

// ä¼˜é›…é€€å‡º
process.on('SIGINT', () => {
  console.log('\nğŸ‘‹ æ­£åœ¨å…³é—­æœåŠ¡å™¨...');

  // åœæ­¢æ¢ç´¢å¼•æ“
  if (explorationEngine) {
    try {
      explorationEngine.stopExploration();
      console.log('ğŸ›‘ æ¢ç´¢å¼•æ“å·²åœæ­¢');
    } catch (error) {
      console.error('åœæ­¢æ¢ç´¢å¼•æ“å¤±è´¥:', error);
    }
  }

  server.close(() => {
    mqttClient.client?.end();
    process.exit(0);
  });
});

// å¯åŠ¨
start();
